Add prettier; add new example with custom font, background colors

--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky",
+    "fmt": "./node_modules/.bin/prettier . --write"
   },
   "devDependencies": {
     "@types/dom-webcodecs": "^0.1.11",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "@webgpu/types": "^0.1.40",
+    "eslint": "^8.57.0",
     "gl-matrix": "^3.4.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "github:prettier/prettier",
+    "prettier-eslint": "^16.3.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
