--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,22 +5,18 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    "types": ["vite/client", "@webgpu/types", "@types/dom-webcodecs"]
-    //    "typeRoots": [ "./node_modules/@webgpu/types"]
+    "types": ["vite/client", "@webgpu/types"]
   },
-  "include": ["src", "../../node_modules/@webgpu/types/dist/index.d.ts", "samples/**/*.ts"]
+  "include": ["src", "samples/**/*.ts"]
 }
