update source code for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gpu-line-experiments",
+  "name": "web-gpu-experiments",
   "private": true,
   "version": "0.0.0",
   "type": "module",
