--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "github:prettier/prettier",
     "prettier-eslint": "^16.3.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-static-copy": "^1.0.1"
   }
 }
