--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "@types/dom-webcodecs": "^0.1.11",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "@webgpu/types": "^0.1.40",
+    "@webgpu/types": "^0.1.51",
     "eslint": "^8.57.0",
+    "fast-xml-parser": "^5.0.6",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "github:prettier/prettier",
     "prettier-eslint": "^16.3.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vite-plugin-static-copy": "^1.0.1"
+    "typescript": "5.7.3",
+    "vite": "6.1.1",
+    "vite-plugin-static-copy": "2.2.0"
+  },
+  "dependencies": {
+    "typegpu": "0.4.3",
+    "wgpu-matrix": "3.3.0"
   }
 }
