--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
           path: "./web-gpu-experiments"
       - name: Deploy to GitHub Pages
