--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "prettier": "github:prettier/prettier",
     "prettier-eslint": "^16.3.0",
     "typescript": "5.7.3",
-    "vite": "6.1.1",
-    "vite-plugin-static-copy": "2.2.0"
+    "vite": "6.1.1"
   },
   "dependencies": {
     "typegpu": "0.4.3",
